guestbook/guestbook-ui-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook-ui
  labels:
    name: guestbook-ui
